# android-luajit-launcher

./: CMakeLists.txt  gradle.properties
app/: build.gradle
app/src/main/java/org/koreader/launcher/: Assets.kt
jni/: unarchive.cpp
